# CBT

./: .gitignore  README.md  analysis.md  calibration.json  error_log.txt  main.py  pyproject.toml  requirements.txt
firmware/esp32_mpu6050/: README.md  esp32_mpu6050.ino
src/: __init__.py  calibration.py  camera.py  config.py  detector.py  filters.py  models.py  osc_sender.py  pipeline.py  server.py  skeleton.py  tracker.py
src/sources/: __init__.py  imu_source.py
tests/: test_config.py  test_filters.py  test_skeleton.py
web/: index.html
web/css/: dashboard.css
web/js/: app.js  metrics.js  skeleton3d.js
